2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimppickable.c (gimp_pickable_pick_color): reduce
	rounding errors.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimppickable.[ch]: removed get_color_at() from the
	GimpPickable interface. Implement the same functionality using
	get_pixel_at() but with a saner API.

	* app/core/gimpdrawable.c
	* app/core/gimpprojection.c
	* app/core/gimpimagemap.c: removed get_color_at() implementations.

	* app/tools/gimpbycolorselecttool.c: adapt to API change of
	gimp_pickable_get_color_at().

	* app/tools/gimprectangleselecttool.c: added missing include.

2007-05-02  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/svg.c: Make size loading work properly with
	new librsvg versions.

	* configure.in: bumped required librsvg version to 2.14.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/poppler.c (load_dialog): set a size request on
	the GimpPageSelector widget.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c
	(gimp_perspective_clone_tool_cursor_update): if we are in adjust
	mode, skip the GimpBrushClass when chaining up. Fixes bug #354933.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c (ts_get_error_msg): applied
	patch from Eric Lamarque that fixes Script-Fu server output
	(bug #431623).

2007-05-02  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/jpeg/jpeg-exif.c: Check if any other IFDs exist before
	rejecting an image's EXIF info. Fixes bug #377917.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpsmudge.c (gimp_smudge_start)

	* app/paint/gimpconvolve.c (gimp_convolve_motion): use
	gimp_pickable_get_pixel_at() to get the color to use with
	color_region(). Fixes Smudge and Convolve tools on grayscale images.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimpparamspecs.c (gimp_param_string_validate): the GLib
	version that has string validation fixed is 2.12.12.
